--- a/style.css
+++ b/style.css
@@ -2,20 +2,23 @@
 * {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
-body {
-    max-width: 1440px;
-    width: 90%;
-    margin: 0 auto;
-}
 
 /* Navigation Styling */
+header {
+    background-color: rgb(20, 20, 52);
+    color: white;
+}
+
 nav, ul {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 75px;
+    
 }
 
 li {
@@ -24,14 +27,16 @@ li {
     margin: 0 15px;
 }
 
-a {
+.nav-link {
     text-decoration: none;
     color: black;
+    color: white;
 }
 
 /* Section Styling */
 section {
     padding: 35px 0;
+    width: 90%;
 }
 
 .section-flex {
@@ -47,8 +52,6 @@ aside {
 .hero {
     text-align: center;
     padding: 100px 0;
-    background-color: rgb(14, 14, 24);
-    color: white;
 }
 
 .project-container {
