--- a/style.css
+++ b/style.css
@@ -1,71 +1,57 @@
 /* General Styling */
 * {
     margin: 0;
+    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0 auto;
     box-sizing: border-box;
 }
 
+h1 {
+    font-size: 30px;
+}
+
+h2 {
+
+}
+
+p {
+    line-height: 1.5em;
+}
 
 /* Navigation Styling */
-header {
-    background-color: rgb(20, 20, 52);
-    color: white;
+header{
+    background-color: rgb(10, 10, 21);
 }
 
-nav, ul {
+nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     height: 75px;
-    
+    width: 90%;
+    max-width: 1440px;
 }
 
-li {
-    text-decoration: none;
-    list-style: none;
-    margin: 0 15px;
+.nav-div {
+    margin: 0;    
+    padding: 0;
 }
+
+ul {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 
 .nav-link {
     text-decoration: none;
-    color: black;
+    margin: 0 15px;
     color: white;
 }
 
 /* Section Styling */
 section {
     padding: 35px 0;
-    width: 90%;
-}
-
-.section-flex {
-    display: flex;
-    padding: 35px 25px;
-    
-}
-
-aside {
-    margin-right: 50px;
-}
-
-.hero {
-    text-align: center;
-    padding: 100px 0;
-}
-
-.project-container {
-    background-image: url("https://images.pexels.com/photos/10187242/pexels-photo-10187242.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-    width: 500px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-}
-
-.project-text {
-    padding: 25px;
-    margin: 25px;
-    background-color: green;
-    width: 30%;
+    max-width: 1440px;
 }
