--- a/style.css
+++ b/style.css
@@ -120,30 +120,33 @@ nav {
 .project-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 15px;
     width: 100%;
+    height: 800px;
 }
 
-#project-1 { grid-area: 1 / 1 / 2 / 3; }
-#project-2 { grid-area: 2 / 1 / 4 / 2; }
-#project-3 { grid-area: 2 / 2 / 4 / 3; }
-#project-4 { grid-area: 3 / 1 / 5 / 2; }
-#project-5 { grid-area: 3 / 2 / 5 / 3; }
+#project-1 { grid-area: 1 / 1 / 3 / 3; }
+#project-2 { grid-area: 3 / 1 / 4 / 2; }
+#project-3 { grid-area: 3 / 2 / 4 / 3; }
+#project-4 { grid-area: 4 / 1 / 5 / 2; }
+#project-5 { grid-area: 4 / 2 / 5 / 3; }
 
 .project-box {
     background-color: var(--dark);
     border: 4px solid var(--accent);
     color: var(--light);
     width: 100%;
-    height: 250px;
     display: flex;
     justify-content: start;
     align-items: flex-end;
 }
 
 .project-info {
-    width: 50%;
+    width: 20%;
+    max-width: 350px;
+    position: absolute;
+    margin: 25px 0;
 }
 
 /* Contact Syling */
