--- a/style.css
+++ b/style.css
@@ -110,10 +110,14 @@ nav {
     background-position: center;
 }
 
+.hero-content {
+    max-width: 1440px;
+}
+
 .hero-title-position {
     position: relative;
     left: 35%;
-    top: 70%;
+    top: 175px;
 }
 
 /* Portfolio Styling */
@@ -159,6 +163,58 @@ nav {
     height: 100px;
 }
 .contact-link {
-    font-size: 1.7em;
+    font-size: 1.5em;
     color: var(--dark);
+}
+
+/* Small Laptop Media Queries */
+@media screen and (max-width: 1160px) {
+    section {
+        padding: 30px 0;
+    }
+
+    .section-row {
+        width: 95%;
+    }
+
+    .column {
+        float: inline-start;
+    }
+
+    .left {
+        width: 100%;
+        text-align: left;
+        padding: 20px 0;
+    }
+
+    .right {
+        width: 100%;
+    }
+
+    .border-line {
+        border: none;
+        padding-left: 0px;
+    }
+
+}
+
+/* Tablet Media Queries */
+@media screen and (max-width: 768px) {
+    /* Portfolio Styling */
+.project-container {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+
+}
+
+#project-1 { grid-area: 1 / 1 / 3 / 3; }
+#project-2 { grid-area: 3 / 1; }
+#project-3 { grid-area: 4 / 1; }
+#project-4 { grid-area: 5 / 1; }
+#project-5 { grid-area: 6 / 1; }
+
+.project-info {
+    width: 50%;
+    margin: 15px 0;
+}
 }
