--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ nav {
         padding: 30px 0;
     }
 
+    p {
+        padding-right: 15px;
+    }
+
     .section-row {
         width: 95%;
     }
@@ -201,20 +205,33 @@ nav {
 /* Tablet Media Queries */
 @media screen and (max-width: 768px) {
     /* Portfolio Styling */
-.project-container {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    .project-container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
 
-}
+    }
 
-#project-1 { grid-area: 1 / 1 / 3 / 3; }
-#project-2 { grid-area: 3 / 1; }
-#project-3 { grid-area: 4 / 1; }
-#project-4 { grid-area: 5 / 1; }
-#project-5 { grid-area: 6 / 1; }
+    #project-1 { grid-area: 1 / 1 / 3 / 3; }
+    #project-2 { grid-area: 3 / 1; }
+    #project-3 { grid-area: 4 / 1; }
+    #project-4 { grid-area: 5 / 1; }
+    #project-5 { grid-area: 6 / 1; }
 
-.project-info {
-    width: 50%;
-    margin: 15px 0;
-}
+    .project-info {
+        width: 50%;
+        margin: 15px 0;
+    }
+
+    /* Contact Syling */
+    .contact-ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .contact-ul li {
+        margin: 10px 0;
+    }
+
 }
