--- a/style.css
+++ b/style.css
@@ -40,13 +40,16 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 75px;
+    height: 100px;
     width: 90%;
     max-width: 1440px;
 }
 
-.logo {
-    font-size: 1.3em;
+#logo {
+    font-size: 1.8em;
+    text-align: right;
+    padding: 0 25px;
+    margin: 0;
 }
 
 .nav-div {
@@ -60,11 +63,22 @@ nav {
     list-style-type: none;
 }
 
-
 .nav-link {
-    text-decoration: none;
+    font-weight: bolder;
     margin: 0 15px;
-    color: var(--light);
+    color: var(--accent);
+}
+
+.nav-logo {
+    text-decoration: none;
+    color: var(--dark);
+}
+
+.nav-logo-container {
+    width: 350px;
+    padding: 15px 0;
+    background-color: var(--accent);
+    margin-left: -75px;
 }
 
 /* Reusable elements */
@@ -116,7 +130,7 @@ nav {
 
 .hero-title-position {
     position: relative;
-    left: 35%;
+    left: 36%;
     top: 175px;
 }
 
@@ -139,7 +153,7 @@ nav {
 .project-box {
     background-color: var(--dark);
     border: 4px solid var(--accent);
-    color: var(--light);
+    color: var(--dark);
     width: 100%;
     display: flex;
     justify-content: start;
