--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ nav {
     background-image: url(https://images.pexels.com/photos/17485678/pexels-photo-17485678/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-depicts-how-ai-could-be-used-in-the-field-of-sustainability-from-biodiversity-to-climate-it-was-created-by-nidia-dias.png?auto=compress&cs=tinysrgb&w=1600);
     background-position: center;
     background-size: cover;
+    cursor: pointer;
+    
 }
 #project-2 { 
     grid-area: 3 / 1 / 4 / 2;
@@ -162,22 +164,28 @@ nav {
     );
     background-position: center;
     background-size: cover;
+    cursor: pointer;
 }
 #project-3 { 
     grid-area: 3 / 2 / 4 / 3;
     background-image: url(https://images.pexels.com/photos/8386365/pexels-photo-8386365.jpeg?auto=compress&cs=tinysrgb&w=1600);
     background-position: center;
     background-size: cover;
+    cursor: pointer;
 }
+
 #project-4 { grid-area: 4 / 1 / 5 / 2; 
     background-image: url(https://images.pexels.com/photos/17484899/pexels-photo-17484899/free-photo-of-an-artist-s-illustration-of-artificial-intelligence-ai-this-image-represents-the-boundaries-set-in-place-to-secure-safe-accountable-biotechnology-it-was-created-by-khyati-trehan-as-pa.png?auto=compress&cs=tinysrgb&w=1600);
     background-position: center;
     background-size: cover;
+    cursor: pointer;
 }
+
 #project-5 { grid-area: 4 / 2 / 5 / 3; 
     background-image: url(https://images.pexels.com/photos/14953694/pexels-photo-14953694.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load);
     background-position: center;
     background-size: cover;
+    cursor: pointer;
 }
 
 .project-box {
@@ -188,7 +196,15 @@ nav {
     display: flex;
     justify-content: start;
     align-items: flex-end;
+    box-shadow: inset 0 0 0 2000px #32343d76;
 }
+
+/* Hover Animations */
+.project-box:hover {
+    box-shadow: inset 0 0 0 0px #32343d00;
+    transition: 200ms;
+}
+
 
 .project-info {
     width: 20%;
