--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ h2 {
     font-size: 2.5em;
 }
 
+h4 {
+    font-weight: 400;
+}
+
 p {
     line-height: 1.5em;
 }
@@ -202,7 +206,7 @@ nav {
 /* Hover Animations */
 .project-box:hover {
     box-shadow: inset 0 0 0 0px #32343d00;
-    transition: 200ms;
+    transition: 200ms ease-in-out;
 }
 
 
